--- a/index.html
+++ b/index.html
@@ -116,6 +116,71 @@
                        </div>
 
                 </div>
+
+<!-- recent section -->
+         <div class="recent-section">
+            <h1 class="pillar-title vision-title recent-title ">The Vision OF Future</h1>
+            <p class="content vision-content">
+                Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.
+               </p>
+
+               <div class="recent-box-container">
+                   <div class="recent-box-1">
+                    <div class="recent-box-1-img">
+                        <img src="assets/satelite.png" alt="">
+
+                    </div>
+                    <div class="recent-box-1-content">
+                        <h1 class="recent-1-title">Bangladesh Launchees New Satallite</h1>
+                        <img src="assets/al-jazeera.png" alt="">
+                        <p class="recent-1-date">Date:05/01/2025  Time:10.25 PM</p>
+                        <P class="recent-1-content">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree of justification, be able to speak of humankind as civilized</P>
+
+                        <button class="recent-box-1-btn">Read More</button>
+
+                    </div>
+
+                   </div>
+                   <div class="recent-box-1">
+                   
+                    <div class="recent-box-1-content">
+                        <h1 class="recent-1-title">Bangladesh Launchees New Satallite</h1>
+                        <img src="assets/al-jazeera.png" alt="">
+                        <p class="recent-1-date">Date:05/01/2025  Time:10.25 PM</p>
+                        <P class="recent-1-content">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree of justification, be able to speak of humankind as civilized</P>
+
+                        <button class="recent-box-1-btn">Read More</button>
+
+                    </div>
+                    <div class="recent-box-1-img">
+                        <img src="assets/satelite.png" alt="">
+
+                    </div>
+
+
+
+                   </div>
+                   <div class="recent-box-1">
+                    <div class="recent-box-1-img">
+                        <img src="assets/satelite.png" alt="">
+
+                    </div>
+                    <div class="recent-box-1-content">
+                        <h1 class="recent-1-title">Bangladesh Launchees New Satallite</h1>
+                        <img src="assets/al-jazeera.png" alt="">
+                        <p class="recent-1-date">Date:05/01/2025  Time:10.25 PM</p>
+                        <P class="recent-1-content">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree of justification, be able to speak of humankind as civilized</P>
+
+                        <button class="recent-box-1-btn">Read More</button>
+
+                    </div>
+
+                   </div>
+
+               </div>
+
+
+         </div>
             
 
 
